wow the fresh perspective

--- a/site/.kobweb/site/index.html
+++ b/site/.kobweb/site/index.html
@@ -4,7 +4,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <title>Kobweb - Home</title>
   <meta content="Powered by Kobweb" name="description">
-  <link href="/favicon.ico" rel="icon">
+  <link href="/GDCWebsite/favicon.ico" rel="icon">
   <meta content="width=device-width, initial-scale=1" name="viewport">
  </head>
  <body>
@@ -25,10 +25,10 @@
      </svg>
      <div class="kobweb-col kobweb-arrange-top kobweb-align-center-horiz" style="width: 100%; height: 100%; grid-row: 1 / 2;">
       <div class="nav-header kobweb-row kobweb-arrange-start kobweb-align-center-vert">
-       <a class="silk-link" href="https://kobweb.varabyte.com"><img class="silk-image" style="height: 2rem; display: block;" src="/kobweb-logo.png" alt="Kobweb Logo"></a>
+       <a class="silk-link" href="https://kobweb.varabyte.com"><img class="silk-image" style="height: 2rem; display: block;" src="/GDCWebsite/kobweb-logo.png" alt="Kobweb Logo"></a>
        <div class="kobweb-spacer"></div>
        <div class="silk-display-if-at-least-md kobweb-row kobweb-arrange-start kobweb-align-center-vert" style="gap: 1.5rem;">
-        <a class="silk-link silk-link-undecorated silk-link-uncolored" href="/">Home</a><a class="silk-link silk-link-undecorated silk-link-uncolored" href="/about">About</a><button class="silk-button silk-button-circle silk-button-uncolored silk-button-size_md" style="--silk-button-font-size: 1em;" type="button">
+        <a class="silk-link silk-link-undecorated silk-link-uncolored" href="/GDCWebsite/">Home</a><a class="silk-link silk-link-undecorated silk-link-uncolored" href="/GDCWebsite/about">About</a><button class="silk-button silk-button-circle silk-button-uncolored silk-button-size_md" style="--silk-button-font-size: 1em;" type="button">
          <div class="kobweb-row kobweb-arrange-center kobweb-align-center-vert">
           <svg style="overflow: visible;" width="1em" viewBox="0 0 200 200" stroke="currentColor" fill="none" stroke-width="20">
            <path d="M 175 106.583 A 75 75 0 1 1 93.417 25 A 58.333 58.333 0 0 0 175 106.583 Z"></path>
@@ -59,7 +59,7 @@
            <span class="silk-span-text" style="color: black; white-space: pre-wrap;">Use this template as your starting point for </span><span class="silk-span-text" style="color: rgb(252, 186, 3); text-shadow: gray 0px 0px 0.5rem;">Kobweb</span>
           </div>
           <div class="subheadline-text subheadline-text_light">
-           <span class="silk-span-text" style="white-space: pre-wrap;">You can read the </span><a class="silk-link" href="/about">About</a><span class="silk-span-text" style="white-space: pre-wrap;"> page for more information.</span>
+           <span class="silk-span-text" style="white-space: pre-wrap;">You can read the </span><a class="silk-link" href="/GDCWebsite/about">About</a><span class="silk-span-text" style="white-space: pre-wrap;"> page for more information.</span>
           </div><button class="silk-button silk-button-size_md" style="--silk-button-color: white; --silk-button-background-default-color: rgb(33, 150, 243); --silk-button-background-hover-color: rgb(30, 136, 229); --silk-button-background-pressed-color: rgb(25, 118, 210);" type="button">
            <div class="kobweb-row kobweb-arrange-center kobweb-align-center-vert">
             This could be your CTA
@@ -83,6 +83,6 @@
     </div>
    </div>
   </div>
-  <script src="/umdgdc.js"></script>
+  <script src="/GDCWebsite/umdgdc.js"></script>
  </body>
 </html>
